--- a/util/swagger/doc.yaml
+++ b/util/swagger/doc.yaml
@@ -70,7 +70,30 @@ paths:
           description: '{"message" : "Not Token || invalid token"}'
         500:
           description: '{"message" : "Exception"}'
-        
+
+  /restaurantCategory:
+    get:
+      summary: 식당 카테고리 정보 리스트
+      tags:
+      - restaurant_category
+      parameters:
+      - in: "header"
+        name: "x-access-token"
+        type: string
+      responses:
+        200:
+          description: "카테고리 리스트"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/restaurant_category"
+        403:
+          description: '{"message" : "Not Token || invalid token"}'
+        500:
+          description: '{"message" : "Exception"}'
+      security:
+        - api_key: []
+          
 definitions:
   user:
     type: object
@@ -114,13 +137,10 @@ definitions:
       lat:
         type: number
         format: FLOAT
-        default: null
-        
         
       lng:
         type: number
         format: FLOAT
-        default: null
       
       address:
         type: string
