--- a/util/swagger/doc.yaml
+++ b/util/swagger/doc.yaml
@@ -116,7 +116,61 @@ paths:
       security:
         - api_key: []
 
+
+  /restaurant_point:
+    get:
+      summary: 식당 지도 포인트 정보
+      tags:
+      - restaurant
+      parameters:
+      - in: "header"
+        name: "x-access-token"
+        type: string
+      - in: "body"
+        name: "body"
+        required: false
+        type: object
+        properties:
+          category_id:
+            type: integer
+      responses:
+        200:
+          description: '[{"id": **,"lat": **,"lng": ***,"category_id": *}]'
+        403:
+          description: '{"message" : "Not Token || invalid token"}'
+        500:
+          description: '그 외의 에러 발생시 : {"message" : "Exception"}'
+      security:
+        - api_key: []
+          
   /restaurant:
+    get:
+      summary: 식당 리스트
+      tags:
+      - restaurant
+      parameters:
+      - in: "header"
+        name: "x-access-token"
+        type: string
+      - in: "body"
+        name: "body"
+        required: false
+        type: object
+        properties:
+          category_id:
+            type: integer
+          page:
+            type: integer
+      responses:
+        200:
+          description: '[{"id": **, "name": "***", "floor": **, "introduction": "http://place.map.kakao.com/******", "lat": ***, "lng": ***, "address": "*****", "address_road": "*****", "category_id": *}]'
+        403:
+          description: '{"message" : "Not Token || invalid token"}'
+        500:
+          description: '그 외의 에러 발생시 : {"message" : "Exception"}'
+      security:
+        - api_key: []
+
     post:
       summary: 식당 정보 입력
       tags:
@@ -125,6 +179,11 @@ paths:
       - in: "header"
         name: "x-access-token"
         type: string
+      - in: "body"
+        name: "body"
+        required: true
+        schema:
+          $ref: "#/definitions/restaurant"
       responses:
         200:
           description: "{restaurantId : 입력된 식당의 아이디}"
@@ -154,6 +213,11 @@ paths:
       - in: "header"
         name: "x-access-token"
         type: string
+      - in: "body"
+        name: "body"
+        required: true
+        schema:
+          $ref: "#/definitions/restaurant"
       responses:
         200:
           description: "{restaurantId : 변경된 식당의 아이디}"
@@ -174,7 +238,171 @@ paths:
           description: '그 외의 에러 발생시 : {"message" : "Exception"}'
       security:
         - api_key: []
-          
+  /restaurant/{id}:
+    delete:
+      summary: 식당 정보 삭제
+      tags:
+      - restaurant
+      parameters:
+      - in: "header"
+        name: "x-access-token"
+        type: string
+      responses:
+        200:
+          description: '{"result": true}'
+        403:
+          description: '{"message" : "Not Token || invalid token"}'
+        422:
+          description: 'parameter value 유효성 체크 : {
+                            "errors": [
+                                {
+                                    "value": "***",
+                                    "msg": "Invalid value",
+                                    "param": "id",
+                                    "location": "Path Variable"
+                                }
+                            ]
+                        }'
+        500:
+          description: '그 외의 에러 발생시 : {"message" : "Exception"}'
+      security:
+        - api_key: []
+
+  /review:
+    get:
+      summary: 리뷰 리스트
+      tags:
+      - review
+      parameters:
+      - in: "header"
+        name: "x-access-token"
+        type: string
+      - in: "body"
+        name: "body"
+        required: false
+        type: object
+        properties:
+          restaurant_id:
+            type: integer
+      responses:
+        200:
+          description: '[{"id": **,"create_datetime": "****-**-** **:**:**","delete_datetime": null,"rating": *,"comment": "*****","user_id": ***,"restaurant_id": ***}]'
+        403:
+          description: '{"message" : "Not Token || invalid token"}'
+        422:
+          description: 'parameter value 유효성 체크 : {
+                            "errors": [
+                                {
+                                    "value": "***",
+                                    "msg": "Invalid value",
+                                    "param": "id",
+                                    "location": "body"
+                                }
+                            ]
+                        }'
+        500:
+          description: '그 외의 에러 발생시 : {"message" : "Exception"}'
+      security:
+        - api_key: []
+
+    post:
+      summary: 리뷰 정보 입력
+      tags:
+      - review
+      parameters:
+      - in: "header"
+        name: "x-access-token"
+        type: string
+      - in: "body"
+        name: "body"
+        required: true
+        schema:
+          $ref: "#/definitions/review"
+      responses:
+        200:
+          description: "{reviewId : 입력된 리뷰 아이디}"
+        403:
+          description: '{"message" : "Not Token || invalid token"}'
+        422:
+          description: 'parameter value 유효성 체크 : {
+                            "errors": [
+                                {
+                                    "value": "***",
+                                    "msg": "Invalid value",
+                                    "param": "rating || restaurant_id",
+                                    "location": "body"
+                                }
+                            ]
+                        }'
+        500:
+          description: '그 외의 에러 발생시 : {"message" : "Exception"}'
+      security:
+        - api_key: []
+        
+    put:
+      summary: 리뷰 정보 수정
+      tags:
+      - review
+      parameters:
+      - in: "header"
+        name: "x-access-token"
+        type: string
+      - in: "body"
+        name: "body"
+        required: true
+        schema:
+          $ref: "#/definitions/review"
+      responses:
+        200:
+          description: "{restaurantId : 변경된 리뷰의 아이디}"
+        403:
+          description: '{"message" : "Not Token || invalid token"}'
+        422:
+          description: 'parameter value 유효성 체크 : {
+                            "errors": [
+                                {
+                                    "value": "***",
+                                    "msg": "Invalid value",
+                                    "param": "rating || id",
+                                    "location": "body"
+                                }
+                            ]
+                        }'
+        500:
+          description: '그 외의 에러 발생시 : {"message" : "Exception"}'
+      security:
+        - api_key: []
+
+  /review/{id}:
+    delete:
+      summary: 리뷰 정보 삭제
+      tags:
+      - review
+      parameters:
+      - in: "header"
+        name: "x-access-token"
+        type: string
+      responses:
+        200:
+          description: '{"result": true}'
+        403:
+          description: '{"message" : "Not Token || invalid token"}'
+        422:
+          description: 'parameter value 유효성 체크 : {
+                            "errors": [
+                                {
+                                    "value": "***",
+                                    "msg": "Invalid value",
+                                    "param": "id",
+                                    "location": "Path Variable"
+                                }
+                            ]
+                        }'
+        500:
+          description: '그 외의 에러 발생시 : {"message" : "Exception"}'
+      security:
+        - api_key: []
+        
 definitions:
   user:
     type: object
