--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "server": "babel-node ./src/bin/www",
+    "dev": "NODE_ENV=development npm-run-all server"
   },
   "dependencies": {
     "async": "^3.1.0",
@@ -17,8 +19,15 @@
     "morgan": "~1.9.1",
     "mysql": "^2.17.1",
     "nodemon": "^1.19.1",
+    "npm-run-all": "^4.1.5",
     "swagger-jsdoc": "^3.4.0",
     "swagger-ui-express": "^4.0.7",
     "uuid": "^3.3.2"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.7.7",
+    "@babel/core": "^7.7.7",
+    "@babel/node": "^7.7.7",
+    "@babel/preset-env": "^7.7.7"
   }
 }
