--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
     "mysql": "^2.17.1",
+    "mysql2": "^2.1.0",
     "nodemon": "^1.19.1",
     "npm-run-all": "^4.1.5",
     "swagger-jsdoc": "^3.4.0",
